--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Style Settings */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 :root {
-    --bgColor: #fff7f6!important ;
-    --accentColor: #fb6666  !important;
+    --bgColor: #143427    !important ;
+    --accentColor: #295443   !important;
     --font: 'Roboto Slab', serif;
 }
 
@@ -12,33 +12,88 @@ body{
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
-    background-color: var(--bgColor) !important;
+    background-image: url(./assets/images/background.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;   
+}
+
+header{
+  width: 100%;
+  height: 300px;
+  display: flex;
+
+}
+
+header .slider{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 800px;
+  max-height: 300px;
+  position: relative;
+  margin-top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.slider img{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  opacity: 0;
+  border-radius: 5px;
+  position: absolute;
+}
+.slider img.selected{
+  opacity: 1;
+}
+
+.company-info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.company-info img{
+  width:80px;
+  height:80px;
+  margin-left: 15px;
 }
 
 #userPhoto{ 
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+    margin-top: 40px;
     /*border-radius: 50%;*/
     /*border: 5px solid var(--accentColor);*/
 }
 
-
-
 @font-face {
 
     font-family: Teste;
-    src: url(font_1.ttf);
+    src: url(./assets/fonts/Albertyne\ Font\ by\ Kelik\ \(7NTypes\).otf);
 }
 
 #fontH1{
+     color: #ffffff;
      font-family: Teste;
-     font-size: 80px;
-     margin-bottom: -10px;
+     font-size: 50px;
+     margin-bottom: -15px;
 }
 
 #links{
     max-width: 675px;
     width: 100%;
+}
+
+
+#logotipo {
+
+  border-radius: 5%;
+  margin-bottom: 8%; 
+
 }
 
 
@@ -60,7 +115,26 @@ body{
 .link:hover{
     background-color: #fff7f6;
     color: var(--accentColor);
+    }
+
+
+.btn_wpp{
+
+    background-color: #4fce5d;
+    font-family: var(--font);
+    color: white;
+    text-align: center;
+    border-radius: 50px;
+    padding: 13px;
+    text-decoration: none;
+    font-size: 1rem;
     
+}
+
+.btn_wpp:hover{
+
+color: #fff7f6;
+
 }
 
 	/* Social Media */ 
@@ -71,7 +145,7 @@ body{
       }
 
       #social-media a{
-          color: #6b6b6b;
+          color: #ffffff;
       }
 
       #social-media ul li a {
@@ -81,5 +155,54 @@ body{
       #social-media ul li a:hover {
         opacity: 0.8 !important;
         
+      }
+
+          /* The Modal */
+    .modal {
+        display: none;
+        /* Hidden by default */
+        position: fixed;
+        /* Stay in place */
+        z-index: 1;
+        /* Sit on top */
+        padding-top: 100px;
+        /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%;
+        /* Full width */
+        height: 100%;
+        /* Full height */
+        overflow: auto;
+        /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0);
+        /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4);
+        /* Black w/ opacity */
+      }
+  
+      /* Modal Content */
+      .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80% !important;
+        height: auto;
+      }
+  
+      /* The Close Button */
+      .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+  
+      .close:hover,
+      .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
       }
 
