--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ header .slider{
   opacity: 1;
 }
 
+
 .company-info{
   display: flex;
   justify-content: center;
@@ -206,3 +207,17 @@ color: #fff7f6;
         cursor: pointer;
       }
 
+  @media (max-width:500px){
+      header{
+        height: 200px;
+      }
+      header .slider{
+        max-width: 100%;
+        height: 200px;
+        
+      }
+      .slider img{
+        height: 200px;
+      }
+      }
+      
