--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header{
 header .slider{
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 80%;
   max-width: 800px;
   max-height: 300px;
   position: relative;
@@ -207,9 +207,11 @@ color: #fff7f6;
         cursor: pointer;
       }
 
+
   @media (max-width:500px){
       header{
-        height: 200px;
+        width: 100%;
+        height: 350px;
       }
       header .slider{
         max-width: 100%;
@@ -217,7 +219,7 @@ color: #fff7f6;
         
       }
       .slider img{
-        height: 200px;
+        height: 350px;
+        object-fit: fill;
       }
       }
-      
